# dexer

./: .gitignore  Cargo.toml  Justfile  README.md
.gitea/workflows/: demo.yaml
.zed/: debug.json
src/: disassembler.rs  instructions.rs  main.rs  types.rs  utils.rs
src/dexcore/: disassembler.rs  mod.rs  types.rs  utils.rs
