[package]
name = "dexer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
memmap = "*"
simple_logger = "*"
adler32 = "*"
bitflags = "2.6.0"

clap = { version = "4.5.36", features = ["std","derive"], default-features = false }
lazy_static = "1.5.0"


[profile.release]
debug = true
# opt-level = 3
# lto = true

[profile.dev.package."*"]
opt-level = 3
