[package]
name = "dexer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
memmap = "*"
simple_logger = "*"
adler32 = "*"
bitflags = "2.6.0"
pico-args = "0.5.0"
thiserror = "2.0.17"


[profile.release]
debug = true
opt-level = 3
lto = true

# [profile.dev.package."*"]
# opt-level = 3
